[gd_scene load_steps=12 format=2]

[ext_resource path="res://frag3/frag3.png" type="Texture" id=1]
[ext_resource path="res://frag2/vzr1.png" type="Texture" id=2]
[ext_resource path="res://frag2/vzr2.png" type="Texture" id=3]
[ext_resource path="res://frag2/vzr3.png" type="Texture" id=4]
[ext_resource path="res://frag2/vzr4.png" type="Texture" id=5]
[ext_resource path="res://frag2/vzr5.png" type="Texture" id=6]
[ext_resource path="res://frag2/vzr6.png" type="Texture" id=7]
[ext_resource path="res://frag3/frag3.gd" type="Script" id=8]
[ext_resource path="res://audio/vzr.wav" type="AudioStream" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "death",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 28.0
height = 4.0

[node name="frag3" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
show_behind_parent = true
frames = SubResource( 1 )
animation = "death"
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="."]
show_behind_parent = true
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Raycast_right" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 36, 0 )
collision_mask = 4

[node name="Raycast_left" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -36, 0 )
collision_mask = 4

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
